hphp/hack/test/typecheck/lambda/variadics/use_declared_types.php.like_types.exp
File "use_declared_types.php", line 18, characters 5-50:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "use_declared_types.php", line 35, characters 23-24:
Invalid argument (Typing[4110])
File "use_declared_types.php", line 11, characters 28-29:
Expected B (variadic argument)
File "use_declared_types.php", line 34, characters 11-12:
But got A (variadic argument)
File "use_declared_types.php", line 40, characters 21-22:
Invalid argument (Typing[4110])
File "use_declared_types.php", line 11, characters 28-29:
Expected B (variadic argument)
File "use_declared_types.php", line 39, characters 19-20:
But got A (variadic argument)
